bouncing-balls/application-mainfest/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: bouncing-balls
  labels:
    argocd.argoproj.io/managed-by: openshift-gitops
