bouncing-balls/application-mainfest/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: bouncing-balls
  name: bouncing-balls
  namespace: bouncing-balls
spec:
  replicas: 1
  selector:
    matchLabels:
      app: bouncing-balls
  strategy: {}
  template:
    metadata:
      labels:
        app: bouncing-balls
    spec:
      containers:
      - image: quay.io/rhdevelopers/bgd:1.0.0
        name: bouncing-balls
