bouncing-balls/application-mainfest/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: bouncing-balls
  name: bouncing-balls
  namespace: bouncing-balls
spec:
  ports:
  - port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: bouncing-balls
